add start commands to readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ###### CUSTOM #####
 models
-
+tempCodeRunnerFile.py
 # Created by https://www.gitignore.io/api/linux,python,windows,jetbrains+all,visualstudiocode
 
 ### JetBrains+all ###
