--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 #Module for usage of rasa nlu with tensorflow
-rasa_nlu[tensorflow] = 0.13.1
+rasa_nlu[tensorflow] == 0.13.1
 #Module for testing
-pytest = 3.7.4
+pytest == 3.7.4
 #Module to start a local nlu webserver
-pypiwin32 = 223
+pypiwin32 == 223
