rename contaienr to work with project isntead of network

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,13 +2,6 @@ version: '3'
 
 services: 
   chatbot-nlu: 
-    image: nlu
+    image: chatbot-nlu
     restart: always
-    networks:
-      - chatbot
-    ports:
-      - 5000:5000
-networks:
-  chatbot:
-    external: true
    
