--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,4 +3,8 @@ version: '3'
 services: 
   chatbot-nlu: 
     image: docker.nexus.gpchatbot.archi-lab.io/chatbot/nlu:latest
-   
+    networks:
+      - chatbot
+networks:
+  chatbot:
+    external: true
