--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,9 @@
 #Configurationfile for NLU
-language: en
-pipeline: tensorflow_embedding
+language: de
+pipeline:
+- name: "ner_duckling_http"
+  url: "http://duckling:8000"
+- name: "tokenizer_whitespace"
+- name: "ner_crf"
+- name: "intent_featurizer_count_vectors"
+- name: "intent_classifier_tensorflow_embedding"
