--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,6 +5,14 @@ services:
     image: docker.nexus.gpchatbot.archi-lab.io/chatbot/nlu:latest
     networks:
       - chatbot
+      - nlu
+    ports:
+      - "5000:5000"
+  duckling:
+    image: rasa/duckling:latest
+    networks:
+      - nlu
 networks:
   chatbot:
     external: true
+  nlu:
