--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,11 @@ language: de
 pipeline:
 - name: "ner_duckling_http"
   url: "http://duckling:8000"
+- name: "nlp_spacy"
+- name: "ner_spacy"
 - name: "tokenizer_whitespace"
 - name: "ner_crf"
 - name: "intent_featurizer_count_vectors"
 - name: "intent_classifier_tensorflow_embedding"
+  intent_tokenization_flag: true
+  intent_split_symbol: "+"
