--- a/bamboo-spec/pom.xml
+++ b/bamboo-spec/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>com.atlassian.bamboo</groupId>
     <artifactId>bamboo-specs-parent</artifactId>
-    <version>6.2.1</version>
+    <version>6.7.0-rc2</version>
     <relativePath/>
   </parent>
 
-  <groupId>com.my.company</groupId>
-  <artifactId>bamboo-specs</artifactId>
+  <groupId>io.archi-lab.chatbot</groupId>
+  <artifactId>bamboo-spec</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
