--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ pipeline:
 - name: "ner_crf"
 - name: "ner_synonyms"
 - name: "intent_featurizer_count_vectors"
-  OOV_token: oov
+  OOV_token: "oov"
 - name: "intent_classifier_tensorflow_embedding"
   intent_tokenization_flag: true
   intent_split_symbol: "+"
